@@ -1,41 +1,50 @@
 package com.nuriwoolim.pagebackend.core.config;
 
-import java.util.List;
-
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
+import java.util.Arrays;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
 
 @Configuration
+@RequiredArgsConstructor
 public class SwaggerConfig {
 
-	@Bean
-	public OpenAPI openAPI() {
-		// JWT 인증 방식 정의
-		SecurityScheme securityScheme = new SecurityScheme()
-			.type(SecurityScheme.Type.HTTP)
-			.scheme("bearer")
-			.bearerFormat("JWT")
-			.in(SecurityScheme.In.HEADER)
-			.name("Authorization");
+    private final Environment environment;
 
-		// 보안 요구사항 추가
-		SecurityRequirement securityRequirement = new SecurityRequirement().addList("bearerAuth");
+    @Bean
+    public OpenAPI openAPI() {
+        // JWT 인증 방식 정의
+        SecurityScheme securityScheme = new SecurityScheme()
+            .type(SecurityScheme.Type.HTTP)
+            .scheme("bearer")
+            .bearerFormat("JWT")
+            .in(SecurityScheme.In.HEADER)
+            .name("Authorization");
 
-		return new OpenAPI()
-			.info(new Info()
-				.title("Nuriwoolim API")
-				.description("누리울림 프로젝트 API 문서")
-				.version("v1.0.0"))
-			.components(new Components()
-				.addSecuritySchemes("bearerAuth", securityScheme))
-			.addSecurityItem(securityRequirement)
-			.servers(List.of(new Server().url("/api"), new Server().url("/")));
-	}
+        // 보안 요구사항 추가
+        SecurityRequirement securityRequirement = new SecurityRequirement().addList("bearerAuth");
+
+        boolean isProd = Arrays.asList(environment.getActiveProfiles()).contains("prod");
+        List<Server> servers = isProd
+            ? List.of(new Server().url("/api"), new Server().url("/"))
+            : List.of(new Server().url("/"), new Server().url("/api"));
+
+        return new OpenAPI()
+            .info(new Info()
+                .title("Nuriwoolim API")
+                .description("누리울림 프로젝트 API 문서")
+                .version("v1.0.0"))
+            .components(new Components()
+                .addSecuritySchemes("bearerAuth", securityScheme))
+            .addSecurityItem(securityRequirement)
+            .servers(servers);
+    }
 }
